latest code for major changes done
